--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.2",
     "git": "^0.1.5",
     "local": "^0.3.3",
     "mongoose": "^6.2.3",
